<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lpeso"
            android:layout_width="126dp"
            android:layout_height="34dp"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_weight="1"
            android:text="@string/Peso"
            android:textAlignment="textEnd"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/peso"
            android:layout_width="269dp"
            android:layout_height="52dp"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:textColor="#000000"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lestatura"
            android:layout_width="127dp"
            android:layout_height="34dp"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_weight="1"
            android:text="@string/estatura"
            android:textAlignment="textEnd"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/estatura"
            android:layout_width="259dp"
            android:layout_height="52dp"
            android:layout_column="1"
            android:layout_row="1"
            android:inputType="numberDecimal"
            android:textColor="#000000"
            android:textSize="30sp" />
    </LinearLayout>

    <Button
        android:id="@+id/calcular"
        android:layout_width="243dp"
        android:layout_height="52dp"
        android:layout_column="0"
        android:layout_row="2"
        android:onClick="calcular"
        android:text="@string/calcular"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/imc"
            android:layout_width="101dp"
            android:layout_height="58dp"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_weight="1"
            android:text="@string/IMC"
            android:textAlignment="textEnd"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/indice"
            android:layout_width="271dp"
            android:layout_height="57dp"

            android:layout_row="4"
            android:layout_weight="1"
            android:textColor="#000000"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="288dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/clas"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/clasificacion"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/clas_gen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="6"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/clas_es"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="7"
            android:textColor="#000000"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/fotos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/imc_barra" />

    </LinearLayout>


</GridLayout>
